# sharded-storage-toy-model

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
circuits/: .gitignore  Nargo.toml  Prover.toml  README.md
circuits/src/: common.nr  lib.nr  main.nr
circuits/tools/: gen_assert_block_data.py
cli-client/: index.ts  package.json  tsconfig.json
client-app/: .prettierrc  Dockerfile  package.json  tsconfig.json  vite.config.ts
client-app/nginx/: nginx.conf
client-app/src/: global.d.ts
common/: package.json  tsconfig.json
common/src/: api.ts  binary.ts  codec.ts  fields.ts  index.ts  types.ts
common/test/: codec.test.ts
crypto-sdk/: .gitignore  README.md  noir-codegen.sh  package.json  tsconfig.json
crypto-sdk/poseidon2-merkle-tree/: Cargo.toml
crypto-sdk/poseidon2-merkle-tree/src/: lib.rs  parameters.rs
crypto-sdk/poseidon2-merkle-tree/tests/: web.rs
crypto-sdk/src/: index.ts  merkle-tree.test.ts  merkle-tree.ts  mining.ts  nargo-wrapper.ts  settings.ts  state.ts  util.ts
crypto-sdk/test/: merkle-tree.test.ts  pubhash.test.ts  state.test.ts
poseidon2-bn256/: .dockerignore  Cargo.toml  README.md  build.sh
poseidon2-bn256/src/: lib.rs  parameters.rs  sponge.rs
poseidon2-bn256/tests/: web.rs
sequencer/: .gitignore  Dockerfile  package.json  tsconfig.json
sequencer/src/: blocks.ts  contract.ts  (+5 more)
smart-contracts/: .env.example  .gitignore  hardhat.config.js  package-lock.json  package.json
storage-node/: Dockerfile  package.json  tsconfig.json
(+30 files in other folders)
