[package]
name = "poseidon2-merkle-tree"
version = "0.1.0"
authors = ["Ivan Oleynikov <ivan.oleynikov95@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
zkhash = { git = "https://github.com/HorizenLabs/poseidon2", branch = "main" }
getrandom = { version = "0.2", features = ["js"] }
ark-ff = { version = "0.4" }
ark-bn254 = { version = "0.4" }
num-bigint = { version = "0.4" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
